--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "openPhases" : ["phaseBugReporting", "phaseTeamResponse", "phaseTesterResponse", "phaseModeration"],
-  "phaseBugReporting": "bugreporting",
-  "phaseTeamResponse": "bugreporting",
-  "phaseTesterResponse": "bugreporting",
+  "phaseBugReporting": "testrepo",
+  "phaseTeamResponse": "testrepo",
+  "phaseTesterResponse": "testrepo",
   "phaseModeration": "pe-evaluation"
 }
